--- a/tariffs.html
+++ b/tariffs.html
@@ -39,8 +39,8 @@
 <div class="header_section">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-tariff">
-            <div class="logo"><a href="index.html"><h1 class="m-0 your_text">LUCKY CASINO</h1></a></div>
-<!--            <div class="logo"><a href="index.html"><h1 class="m-0 your_text">LUCKY</h1></a></div>-->
+<!--            <div class="logo"><a href="index.html"><h1 class="m-0 your_text">LUCKY CASINO</h1></a></div>-->
+            <div class="logo"><a href="index.html"><h1 class="m-0 your_text">LUCKY</h1></a></div>
             <div class="form-inline my-2">
                 <a class="btn btn-outline-success my-2 my-sm-0" href="form.html">BAŞLAMAK</a>
             </div>
@@ -48,89 +48,44 @@
     </div>
 </div>
 
-<!--<div class="product_section" id="tariffs">-->
-<!--    <div class="container">-->
-<!--        <h2 class="tariffs_text mt-tariff">Koşullar</h2>-->
-<!--        <div class="product_section2 pt-0">-->
-<!--            <div class="row">-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <h2 class="easy_text">Silver</h2>-->
-<!--                    <h1 class="internet_text">100 Mbps</h1>-->
-<!--                    <div class="month_main clearfix">-->
-<!--                        <h1 class="dolor_text">40 ₼</h1>-->
-<!--                        <h2 class="month_text">Ayda</h2>-->
-<!--                        <p class="long_text">Oyuncular, sinema tutkunları, iş ve maksimum eğlence için sınırsız-->
-<!--                            İnternet</p>-->
-<!--                    </div>-->
-<!--                    <div class="seemore_main">-->
-<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <h2 class="easy_text">Gold</h2>-->
-<!--                    <h1 class="internet_text">300 Mbps</h1>-->
-<!--                    <div class="month_main clearfix">-->
-<!--                        <h1 class="dolor_text">60 ₼</h1>-->
-<!--                        <h2 class="month_text">Ayda</h2>-->
-<!--                        <p class="long_text">Çocukların, ebeveynlerin ve misafirlerin birçok cihazı bile İnternet'e-->
-<!--                            maksimum düzeyde sahip olacak</p>-->
-<!--                    </div>-->
-<!--                    <div class="seemore_main">-->
-<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-12">-->
-<!--                    <h2 class="easy_text">Premium</h2>-->
-<!--                    <h1 class="internet_text">500 Mbps</h1>-->
-<!--                    <div class="month_main clearfix">-->
-<!--                        <h1 class="dolor_text">80 ₼</h1>-->
-<!--                        <h2 class="month_text">Ayda</h2>-->
-<!--                        <p class="long_text">Bu, yeterli olan modern hız standardıdır</p>-->
-<!--                    </div>-->
-<!--                    <div class="seemore_main">-->
-<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 <div class="product_section" id="tariffs">
     <div class="container">
         <h2 class="tariffs_text mt-tariff">Koşullar</h2>
         <div class="product_section2 pt-0">
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <h2 class="easy_text">OLYMP CASINO</h2>
-                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>
+                    <h2 class="easy_text">Silver</h2>
+                    <h1 class="internet_text">100 Mbps</h1>
                     <div class="month_main clearfix">
-                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>
-                        <h2 class="month_text">Типы подключения</h2>
-                        <p class="long_text">Android/App Store</p>
+                        <h1 class="dolor_text">40 ₼</h1>
+                        <h2 class="month_text">Ayda</h2>
+                        <p class="long_text">Oyuncular, sinema tutkunları, iş ve maksimum eğlence için sınırsız
+                            İnternet</p>
                     </div>
                     <div class="seemore_main">
                         <div class="see_more"><a href="form.html">Bağlamak</a></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                    <h2 class="easy_text">OLYMP CASINO</h2>
-                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>
+                    <h2 class="easy_text">Gold</h2>
+                    <h1 class="internet_text">300 Mbps</h1>
                     <div class="month_main clearfix">
-                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>
-                        <h2 class="month_text">Типы подключения</h2>
-                        <p class="long_text">Android/App Store</p>
+                        <h1 class="dolor_text">60 ₼</h1>
+                        <h2 class="month_text">Ayda</h2>
+                        <p class="long_text">Çocukların, ebeveynlerin ve misafirlerin birçok cihazı bile İnternet'e
+                            maksimum düzeyde sahip olacak</p>
                     </div>
                     <div class="seemore_main">
                         <div class="see_more"><a href="form.html">Bağlamak</a></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                    <h2 class="easy_text">OLYMP CASINO</h2>
-                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>
+                    <h2 class="easy_text">Premium</h2>
+                    <h1 class="internet_text">500 Mbps</h1>
                     <div class="month_main clearfix">
-                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>
-                        <h2 class="month_text">Типы подключения</h2>
-                        <p class="long_text">Android/App Store</p>
+                        <h1 class="dolor_text">80 ₼</h1>
+                        <h2 class="month_text">Ayda</h2>
+                        <p class="long_text">Bu, yeterli olan modern hız standardıdır</p>
                     </div>
                     <div class="seemore_main">
                         <div class="see_more"><a href="form.html">Bağlamak</a></div>
@@ -140,6 +95,51 @@
         </div>
     </div>
 </div>
+<!--<div class="product_section" id="tariffs">-->
+<!--    <div class="container">-->
+<!--        <h2 class="tariffs_text mt-tariff">Koşullar</h2>-->
+<!--        <div class="product_section2 pt-0">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-4 col-sm-12">-->
+<!--                    <h2 class="easy_text">OLYMP CASINO</h2>-->
+<!--                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>-->
+<!--                    <div class="month_main clearfix">-->
+<!--                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>-->
+<!--                        <h2 class="month_text">Типы подключения</h2>-->
+<!--                        <p class="long_text">Android/App Store</p>-->
+<!--                    </div>-->
+<!--                    <div class="seemore_main">-->
+<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4 col-sm-12">-->
+<!--                    <h2 class="easy_text">OLYMP CASINO</h2>-->
+<!--                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>-->
+<!--                    <div class="month_main clearfix">-->
+<!--                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>-->
+<!--                        <h2 class="month_text">Типы подключения</h2>-->
+<!--                        <p class="long_text">Android/App Store</p>-->
+<!--                    </div>-->
+<!--                    <div class="seemore_main">-->
+<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4 col-sm-12">-->
+<!--                    <h2 class="easy_text">OLYMP CASINO</h2>-->
+<!--                    <h1 class="internet_text">150 000₸ +250FS Бонус</h1>-->
+<!--                    <div class="month_main clearfix">-->
+<!--                        <h1 class="dolor_text">150 000₸ +250FS Бонус</h1>-->
+<!--                        <h2 class="month_text">Типы подключения</h2>-->
+<!--                        <p class="long_text">Android/App Store</p>-->
+<!--                    </div>-->
+<!--                    <div class="seemore_main">-->
+<!--                        <div class="see_more"><a href="form.html">Bağlamak</a></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
     <!-- copyright section start -->
     <div class="copyright_section">
         <div class="container">
